--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "NODE_ENV=test jest --runInBand",
     "test:updateSnapshot": "NODE_ENV=test jest --updateSnapshot",
     "test:coverage": "NODE_ENV=test jest --coverage",
-    "prepare": "husky install",
+    "prepare": "husky || true",
     "pre-commit": "lint-staged",
     "vis": "yarn vite-bundle-visualizer"
   },
