--- a/.eslintrc
+++ b/.eslintrc
@@ -26,13 +26,15 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended" // Make this the last element so prettier config overrides other formatting rules
+    //"plugin:prettier/recommended" // Make this the last element so prettier config overrides other formatting rules
   ],
-  "plugins": ["jest-formatting", "simple-import-sort", "import", "react-hooks"],
+  "plugins": ["jest-formatting", "simple-import-sort", "import", "react-hooks","jsx-no-inline-style"],
   "rules": {
-    "prettier/prettier": ["error", {}, { "usePrettierrc": true }], // Use our .prettierrc file as source
+  //  "prettier/prettier": ["error", {}, { "usePrettierrc": true }], // Use our .prettierrc file as source - disabled because conflict no-inline-style
     "react/react-in-jsx-scope": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["error"],
+    "jsx-no-inline-style/no-inline-style": "error",
+    "@typescript-eslint/no-explicit-any": "off",
   }
 }
