--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-jsx-no-inline-style": "^0.0.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
