--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@sentry/react": "^7.101.1",
     "axios": "^1.6.7",
     "axios-retry": "^4.0.0",
+    "eslint-plugin-tailwindcss": "^3.14.2",
     "eventemitter3": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.2",
     "winston": "^3.11.0",
@@ -81,6 +81,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "rimraf": "^5.0.5",
+    "style-dictionary": "^3.9.2",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
